# appmesh

./: .gitignore  .mcp.json  AMP-AppMesh-Protocol-Specification.md  CLAUDE.md  Cargo.toml  ai.txt
.claude/docs/: architecture.md  laravel-pim-proposal.md
.claude/guidelines/: coding.md  discovery.md  protocols.md
.claude/journal/: 2026-02.md
.claude/runbooks/: add-plugin.md  create-tutorial.md
.claude/skills/: cdp.md  config.md  dbus.md  midi.md  nextcloud.md  osc.md  tts.md  websocket.md
.claude/skills/email/: SKILL.md
.claude/skills/thunderbird/: SKILL.md
_journal/: 2026-02-01.md  2026-02-28.md
crates/appmesh-cli/: Cargo.toml
crates/appmesh-cli/src/: main.rs
crates/appmesh-core/: Cargo.toml  appmesh.h
crates/appmesh-core/src/: eis.rs  ffi.rs  input.rs  lib.rs  port.rs
crates/appmesh-core/src/ports/: clipboard.rs  input.rs  mail.rs  mod.rs  notify.rs  screenshot.rs  windows.rs
docs/: CNAME  appmesh-planning.md  calligra.md  dolphin.md  falkon.md  gwenview.md  haruna.md  http-dbus.md  index.html  kate-dbus-plugin-proposal.md  kate.md  kde-multimedia.md  kdeconnect.md  kdenlive.md  kmail.md  konqueror.md  konsole.md  krita.md  krunner.md  kwave.md  kwin.md  okular.md  plasmashell.md  pro-audio.md  spectacle.md  system-settings.md  text-editors.md  tts-tutorials.md
qml/: CMakeLists.txt  Main.qml  appmeshplugin.cpp  appmeshplugin.h  main.cpp
qml/mail/: Main.qml  main.cpp
qml/mail-kirigami/: Main.qml
qml/plasmoids/com.appmesh.send/: metadata.json
qml/plasmoids/com.appmesh.send/contents/ui/: main.qml
server/: .env.example  appmesh-core.php  appmesh-ffi.php  appmesh-mcp.php
server/plugins/: cdp.php  config.php  dbus.php  keyboard.php  midi.php  nextcloud.php  osc.php  ports.php  tts.php  websocket.php
server/scripts/: screen-record.sh
web/: index.php  sse-signals.php
