[package]
name = "appmesh-core"
version = "0.1.0"
edition = "2021"
description = "AppMesh core library — KWin EIS input injection via libei"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reis = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true }
libc = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
